# agimus-libfranka

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  Jenkinsfile  NOTICE  README.md  flake.nix  package.xml
.github/workflows/: ci_ros2.yml  nix.yml  update-flake-lock.yml
cmake/: FindPoco.cmake  FrankaConfig.cmake.in  agimus_libfrankaConfig.cmake.in
doc/: CMakeLists.txt  main.md
examples/: CMakeLists.txt  cartesian_impedance_control.cpp  communication_test.cpp  echo_robot_state.cpp  examples_common.cpp  examples_common.h  force_control.cpp  generate_cartesian_pose_motion.cpp  generate_cartesian_pose_motion_external_control_loop.cpp  generate_cartesian_velocity_motion.cpp  generate_cartesian_velocity_motion_external_control_loop.cpp  generate_consecutive_motions.cpp  generate_elbow_motion.cpp  generate_joint_position_motion.cpp  generate_joint_position_motion_external_control_loop.cpp  generate_joint_velocity_motion.cpp  generate_joint_velocity_motion_external_control_loop.cpp  grasp_object.cpp  joint_impedance_control.cpp  joint_point_to_point_motion.cpp  motion_with_control.cpp  motion_with_control_external_control_loop.cpp  print_joint_poses.cpp  vacuum_object.cpp
include/agimus_franka/: active_control.h  active_control_base.h  active_motion_generator.h  active_torque_control.h  control_tools.h  control_types.h  duration.h  errors.h  exception.h  gripper.h  gripper_state.h  log.h  lowpass_filter.h  model.h  rate_limiting.h  robot.h  robot_state.h  vacuum_gripper.h  vacuum_gripper_state.h
src/: active_control.cpp  active_motion_generator.cpp  active_torque_control.cpp  control_loop.cpp  control_loop.h  control_tools.cpp  control_types.cpp  duration.cpp  errors.cpp  exception.cpp  gripper.cpp  gripper_state.cpp  libfcimodels.h  library_downloader.cpp  library_downloader.h  library_loader.cpp  library_loader.h  load_calculations.cpp  load_calculations.h  log.cpp  logger.cpp  logger.h  lowpass_filter.cpp  model.cpp  model_library.cpp  model_library.h  motion_generator_traits.h  network.cpp  network.h  rate_limiting.cpp  robot.cpp  robot_control.h  robot_impl.cpp  robot_impl.h  robot_state.cpp  vacuum_gripper.cpp  vacuum_gripper_state.cpp
test/: CMakeLists.txt  active_motion_generator_tests.cpp  active_torque_control_tests.cpp  calculations_tests.cpp  control_loop_tests.cpp  control_types_tests.cpp  duration_tests.cpp  errors_tests.cpp  gripper_command_tests.cpp  gripper_tests.cpp  helpers.cpp  helpers.h  libfcimodels_stub.cpp  logger_tests.cpp  lowpass_filter_tests.cpp  mock_robot.h  mock_robot_control.h  mock_robot_impl.h  mock_server.cpp  mock_server.h  model_library_interface.h  model_tests.cpp  rate_limiting_tests.cpp  robot_command_tests.cpp  robot_impl_tests.cpp  robot_state_tests.cpp  robot_tests.cpp  vacuum_gripper_command_tests.cpp  vacuum_gripper_tests.cpp
